--- a/src/base/_promo.scss
+++ b/src/base/_promo.scss
@@ -1,10 +1,64 @@
 .promo{
     min-height: 650px;
     padding: 21px 0 93px 0;
-    background: url('../img/bg.png');
+    background: url("../img/bg.png");
     background-position: center ;
     background-repeat: no-repeat;
     background-size: cover;
-    
-    
+    &__wrapper{
+        display: flex;
+        flex-direction: column;
+        align-items: flex-end;
+        margin-top: 90px;
+    }  
+    &__header{
+        font-weight: 700;
+        font-size: 42px;
+        line-height: 1;
+        text-transform: uppercase;
+        text-align: right;
+        color: #fff;
+    }
+    &__subheader{
+        margin-top: 17px;
+        font-weight: 500;
+        font-size: 24px;
+        line-height: 1;
+        text-transform: uppercase;
+        text-align: right;
+        color: #fff;
+    }
+    &__icons{
+        margin-top: 60px;
+        width: 425px;
+        display: flex;
+        justify-content: space-between;
+        
+        
+
+    }
+    &__icon{
+        width: 108px;
+        text-align: center;
+        font-weight: 500;
+        font-size: 14px;
+        line-height: 1;
+        img{
+            display: block;
+            margin: 0 auto;
+            margin-bottom: 20px;
+        }
+    }
+    &__link{
+        margin-top:18px;
+        color:white;
+        font-size: 16px;
+        font-weight: 500;
+        a{
+            text-transform: uppercase;
+            text-decoration: underline;
+            color: #fff;
+        }
+    }
+
 }
